--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: fishnettools
+Package: fishnetutils
 Type: Package
 Title: GIS fishnet generator
 Version: 0.1.0
@@ -12,3 +12,7 @@ Imports:
   sf,
   tigris,
   dplyr
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
